Sat Apr 20 14:22:10 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (w_object): dump no ivars to the original by marshal_dump.
	  [ruby-core:54334] [Bug #8276]

	* marshal.c (r_object0): copy all ivars of marshal_dump data to the
	  result object instead.  [ruby-core:51163] [Bug #7627]

Sat Apr 20 02:33:27 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (str_scrub): add ruby method String#scrub which verify and
	  fix invalid byte sequence. [ruby-dev:45975] [Feature #6752]

	* string.c (str_compat_and_valid): check given string is compatible
	  and valid with given encoding.

	* transcode.c (str_transcode0): If invalid: :replace is specified for
	  String#encode, replace invalid byte sequence even if the destination
	  encoding equals to the source encoding.

Fri Apr 19 21:55:40 2013  Kouhei Sutou  <kou@cozmixng.org>

	* README.EXT.ja (Data_Wrap_Struct): Remove a description about
	  orphan argument. Oh, I renamed the argument name without
	  changing description at r36180... Sorry....
	  Patch by Makoto Kishimoto. Thanks!!! [ruby-dev:47269] [Bug #8292]
	* README.EXT.ja (Data_Make_Struct): Add a sample code that describes
	  how it works.
	  Patch by Makoto Kishimoto. Thanks!!! [ruby-dev:47269] [Bug #8292]

Fri Apr 19 17:54:57 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (body_type_msg): should accept
	  message/delivery-status with extra data.
	  [ruby-core:53741] [Bug #8167]

	* test/net/imap/test_imap_response_parser.rb: related test.

Fri Apr 19 13:03:14 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (w_object): do not dump encoding which is dumped with
	  marshal_dump data.  [ruby-core:54334] [Bug #8276]

Fri Apr 19 11:36:53 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (stack_protector): control use of -fstack-protector.

	* configure.in (debugflags): let -fstack-protector precede and disable
	  debugflags, because they can't work together on SmartOS.  [Bug #8268]
