@@ -70,5 +70,9 @@ with all sufficient information, see the ChangeLog file.
   * Rinda now supports multicast sockets.  See Rinda::RingServer and
     Rinda::RingFinger for details.
 
+* Tempfile
+  * New methods:
+    * Tempfile.create
+
 === Stdlib compatibility issues (excluding feature bug fixes)
 === C API updates
